Set variable-dosing/0-0-0 as default for new drug orders

--- a/ui/app/clinical/consultation/views/treatmentSections/addTreatment.html
+++ b/ui/app/clinical/consultation/views/treatmentSections/addTreatment.html
@@ -124,13 +124,13 @@
                                 <div class="field-value">
                                     <input id="morning-dose" type="number" min="0" step="any" ng-model="treatment.variableDosingType.morningDose"
                                            ng-focus="treatment.setFrequencyType('variable')"
-                                           required="required" focus-on="editDrugEntryVariableFrequency" placeholder="&mdash;"/>
+                                           required="required" focus-on="editDrugEntryVariableFrequency" />
                                     <input id="afternoon-dose" type="number" min="0" step="any"
                                            ng-model="treatment.variableDosingType.afternoonDose"
-                                           required="required" placeholder="&mdash;"/>
+                                           required="required" />
                                     <input id="evening-dose" type="number" min="0" step="any"
                                            ng-model="treatment.variableDosingType.eveningDose"
-                                           required="required" placeholder="&mdash;"/>
+                                           required="required" />
                                 </div>
                             </div>
                         </article>
